# podinfo-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  Tiltfile  pre-release-hook.sh  release.toml
.chglog/: config.yml
.github/workflows/: anchore.yml  build.yml  release.yml  trivy.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  pod-security-policy.yaml  psp-role-binding.yaml  psp-role.yaml
src/: config.rs  echo.rs  error.rs  lib.rs  main.rs  runtime_info.rs  z.rs
test/k8s/: deployment.yaml  namespace.yaml  service.yaml
