[package]
name = "podinfo-rs"
version = "0.2.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
axum = "0.4.5"
envconfig = "0.10.0"
log = "0.4.14"
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = [ "macros", "rt-multi-thread" ] }
tower-http = { version = "0.2.3", features = [ "trace" ] }
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
