[package]
name = "podinfo-rs"
version = "0.2.2"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.4.8"
build-info = { version = "0.0.26", features = [ "runtime", "serde" ] }
caps = "0.5.3"
envconfig = "0.10.0"
log = "0.4.17"
serde = "1.0.136"
serde_json = "1.0.79"
sysinfo = "0.23.12"
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = [ "macros", "rt-multi-thread" ] }
tower-http = { version = "0.3.3", features = [ "trace" ] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"

[build-dependencies]
build-info-build = "0.0.26"
