[package]
name = "podinfo-rs"
version = "0.3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = "0.5.8"
build-info = { version = "0.0.26", features = [ "runtime", "serde" ] }
caps = "0.5.3"
envconfig = "0.10.0"
log = "0.4.17"
serde = "1.0.137"
serde_json = "1.0.81"
sysinfo = "0.24.5"
thiserror = "1.0.31"
tokio = { version = "1.20.3", features = [ "macros", "rt-multi-thread" ] }
tower-http = { version = "0.3.4", features = [ "trace" ] }
tracing = "0.1.35"
tracing-subscriber = "0.3.11"

[build-dependencies]
build-info-build = "0.0.26"
